# csv-detective

./: .gitignore  .gitignore~  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS.md  README.md  __init__.py~  analyse_csv.py  bumpr.rc  check-version-bump.sh  circle.yml  code_csp_insee.txt  codes_commune_insee.txt  codes_postaux.txt  compare.py  csp_insee.txt  csp_insee~  data_gouv_api_download.py  departements.txt  detect_autres.py  detect_erreur.py  detect_erreur.py~  detect_from_cells.py  detect_geographiques.py  detect_temporel.py  environment.yml  exemple.py  explore_csv.py  process_text.py  pylock.toml  pyproject.toml  reformat_tab.py  requirements-build.txt  requirements-dev.txt  requirements.txt  run_tests_with_timing.sh  setup.py  (+5 more)
.circleci/: config.yml
csv-detective/: all_packages.txt
csv_detective/: __init__.py  all_packages.txt  analyze_csv_cli.py  cli.py  correction.py  create_example.py  detect_errors.py  detection.py  explore_csv.py  features.py  format.py  load_tests.py  minio_utils.py  prediction.py  process_text.py  s3_utils.py  schema_generation.py  utils.py  validate.py
csv_detective/analyse/: headers.py  one_json.py
csv_detective/detect_fields/: README.md  README.md~  __init__.py
csv_detective/detect_fields_ml/: features.py  prediction.py
csv_detective/detect_labels/: __init__.py
csv_detective/detection/: columns.py  encoding.py  engine.py  formats.py  headers.py  rows.py  separator.py  variables.py
csv_detective/formats/: __init__.py  adresse.py  binary.py  booleen.py  code_commune.py  code_commune_insee.py  code_csp_insee.py  code_departement.py  code_epci.py  code_fantoir.py  code_import.py  code_postal.py  code_region.py  code_rna.py  code_waldec.py  commune.py  csp_insee.py  date.py  date_fr.py  datetime_aware.py  datetime_naive.py  datetime_rfc822.py  departement.py  email.py  epci.py  float.py  geojson.py  id_rnb.py  insee_ape700.py  insee_canton.py  int.py  iso_country_code_alpha2.py  iso_country_code_alpha3.py  iso_country_code_numeric.py  jour_de_la_semaine.py  json.py  latitude_l93.py  latitude_wgs.py  latitude_wgs_fr_metropole.py  latlon_wgs.py  (+19 more)
csv_detective/output/: __init__.py  dataframe.py  example.py  profile.py  schema.py  utils.py
csv_detective/parsing/: columns.py  compression.py  csv.py  excel.py  load.py  parquet.py  text.py
detect_fields/: README.md  __init__.py
detect_fields/autres/: detect_autres.py
detect_fields/geographiques/: detect_geographiques.py
detect_fields/temporels/: detect_temporels.py
detections_champs/: README.md  __init__.py  __init__.py~
detections_champs/autres/: __init__.py  __init__.py~  code_csp_insee.py  code_csp_insee.py~  courriel.py  courriel.py~  csp_insee.py  csp_insee.py~  detect_autres.py~  sexe.py  siren.py  siren.py~  tel_fr.py  url.py
detections_champs/geographiques/: README.md  __init__.py  __init__.py~  adresse.py  code_commune_insee.py  code_departement.py  code_iso_pays.py  code_postal.py  commune.py  departement.py  detect_geographiques.py~  pays.py  region.py
detections_champs/temporels/: README.md  (+7 more)
docs/: formats.md  generate_doc.py
fichiers_de_reference/: README.md
process_text/: README.md  process_text.py
rust/: Cargo.toml  pyproject.toml  update_data.py
rust/data/: cantons.txt  codes_communes.txt  codes_departements.txt  codes_fantoir_partial.txt  codes_postaux.txt  codes_regions.txt  communes.txt  departements.txt  insee_ape700.txt  iso_country_code_alpha2.txt  iso_country_code_alpha3.txt  iso_country_code_numeric.txt  pays.txt  regions.txt
rust/src/: detect.rs  lib.rs  main.rs  python.rs  value.rs
rust/src/formats/: adresse.rs  binary.rs  booleen.rs  code_csp_insee.rs  code_epci.rs  code_fantoir.rs  code_import.rs  code_rna.rs  code_waldec.rs  csp_insee.rs  date.rs  date_fr.rs  datetime_aware.rs  datetime_naive.rs  datetime_rfc822.rs  email.rs  float.rs  fr_geo.rs  geo.rs  geojson.rs  id_rnb.rs  insee_ape700.rs  insee_canton.rs  int.rs  iso_country.rs  jour_de_la_semaine.rs  json.rs  latlon_wgs.rs  lonlat_wgs.rs  mod.rs  mois_de_lannee.rs  money.rs  mongo_object_id.rs  pays.rs  percent.rs  sexe.rs  siren.rs  siret.rs  tel_fr.rs  uai.rs  (+4 more)
test_files/: MN_07_latest-2025-2026.csv  ValeursFoncieres-2024.txt  ValeursFoncieres-2025-S1.txt  a_test_file.csv  date_fr_binary.csv  dates.csv  divers.csv  geo_extra.csv  ids_fr.csv  irve.csv  joconde.csv  ref_data.csv  simple.csv  web_ids.csv
test_results/: 2025-11-28_12-34-39.xml  2025-11-28_12-36-22.xml  2025-11-28_12-37-45.xml  2025-11-28_12-39-53.xml  2025-11-28_12-42-00.xml  2025-11-28_12-43-12.xml  2025-11-28_12-44-16.xml  2025-11-28_12-45-38.xml  2025-11-28_12-46-38.xml  2025-11-28_12-47-45.xml  2025-11-28_12-48-58.xml  2025-11-28_12-53-09.xml  2025-11-28_12-59-25.xml  2025-11-28_13-47-21.xml
tests/: a_test_file.csv  b_test_file.csv  baseline_result.json  c_test_file.csv  conftest.py  d_test_file.csv  file.xls  subventions-commune-de-castelmaurou.csv  test_cli.py  test_csv.py  test_example.py  test_fields.py  test_file.py  test_labels.py  test_structure.py  test_validate_sum_bug.py  test_validation.py  tests.py  tests_fields.py  tests_labels.py
(+183 files in other folders)
