[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-detective"
version = "0.9.1"
description = "Detect tabular files column content"
authors = [{ name = "Etalab", email = "opendatateam@data.gouv.fr" }]
dependencies = [
    "boto3>=1.34.0,<2",
    "dateparser>=1.2.0,<2",
    "faust-cchardet==2.1.19",
    "pandas>=2.2.0,<3",
    "python-dateutil>=2.8.2,<3",
    "Unidecode>=1.3.6,<2",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "odfpy==1.4.1",
    "requests>=2.32.3,<3",
    "python-magic==0.4.27",
    "frformat==0.4.0",
    "Faker>=33.0.0",
    "rstr==3.2.2",
]
requires-python = ">=3.9,<3.14"
license = { text = "MIT" }
readme = "README.md"
keywords = ["CSV", "data processing", "encoding", "guess", "parser", "tabular"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "responses>=0.25.0",
    "bumpx>=0.3.10",
    "ruff>=0.9.3",
]

[project.urls]
Source = "https://github.com/datagouv/csv_detective"

[project.scripts]
csv_detective = "csv_detective.cli:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
csv_detective = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.ruff]
lint = { extend-select = ["I"] } # ["I"] is to also sort imports with an isort rule
line-length = 100
